<resources>
    <string name="app_name">Book rental</string>
    <string name="addBook">Add</string>
    <string name="requestBook">Request new</string>
    <string name="checkRequestBook">Check requests</string>
    <string name="removeBook">Remove/Destroy</string>
    <string name="borrowBook">Borrow</string>
    <string name="borrowedBooks">Borrowed</string>
    <string name="returnBook">Return</string>
    <string name="confirmBorrowing">Confirm borrowing</string>
    <string name="returnBookShort">Return</string>
    <string name="about">About</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="auth_not_verified">Authentication failed, verify your email!</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="addBookTitle">Add book</string>
    <string name="requestBookTitle">Request book</string>
    <string name="addBookTitleHint">Enter title…</string>
    <string name="addBookAuthorHint">Enter author…</string>
    <string name="addBookYearHint">Enter year…</string>
    <string name="addBookSubmitText">Submit</string>
    <string name="requestBookSubmitText">Request</string>
    <string name="listOfBooks">List of books</string>
    <string name="ListOfBooksTitleFilterHint">Filter by contains in title field…</string>
    <string name="ListOfBooksAuthorFilterHint">Filter by contains in author field…</string>
    <string name="ListOfBooksYearFilterHint">Filter by contains in year field…</string>
    <string name="RemoveBookTitleFilterHint">Filter by contains in title field…</string>
    <string name="RemoveBookAuthorFilterHint">Filter by contains in author field…</string>
    <string name="RemoveBookYearFilterHint">Filter by contains in year field…</string>
    <string name="removeBookSubmitText">X</string>
    <string name="BorrowBookTitleFilterHint">Filter by contains in title field…</string>
    <string name="BorrowBookAuthorFilterHint">Filter by contains in author field…</string>
    <string name="BorrowBookYearFilterHint">Filter by contains in year field…</string>
    <string name="AdminReturnBookFilterHint">Filter by email</string>
    <string name="BorrowBookSubmit">Borrow</string>
    <string name="ConfirmBorrowBookSubmit">Confirm</string>
    <string name="ReserveBookSubmit">Reserve</string>
    <string name="ReserveBookCancel">Cancel</string>
    <string name="checkStateBook">Check state book</string>
</resources>
