<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <LinearLayout
        android:id="@+id/first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/addBookButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addBook"/>

        <Button
            android:id="@+id/removeBookButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/removeBook" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/first">
        <Button
            android:id="@+id/borrowBookButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borrowBook" />

        <Button
            android:id="@+id/returnBookButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/returnBook" />

    </LinearLayout>

        <Button
            android:id="@+id/aboutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:layout_below="@+id/second"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:layout_below="@+id/aboutButton"
            android:layout_centerHorizontal="true"/>

</RelativeLayout>