<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/RemoveBookAuthorEditText"
        android:layout_height="wrap_content"
        android:hint="@string/RemoveBookAuthorFilterHint"
        android:layout_width="fill_parent">
    </EditText>

    <EditText
        android:id="@+id/RemoveBookTitleEditText"
        android:layout_height="wrap_content"
        android:hint="@string/RemoveBookTitleFilterHint"
        android:layout_width="fill_parent">
    </EditText>

    <EditText
        android:id="@+id/RemoveBookYearEditText"
        android:layout_height="wrap_content"
        android:hint="@string/RemoveBookYearFilterHint"
        android:layout_width="fill_parent">
    </EditText>

    <ProgressBar
        android:id="@+id/RemoveBookProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/RemoveBookListView"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">
    </ListView>
</LinearLayout>