<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".activity.student.BorrowBookActivity">

        <EditText
            android:id="@+id/BorrowBookAuthorEditText"
            android:layout_height="wrap_content"
            android:hint="@string/BorrowBookAuthorFilterHint"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/BorrowBookTitleEditText"
            android:layout_height="wrap_content"
            android:hint="@string/BorrowBookTitleFilterHint"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/BorrowBookYearEditText"
            android:layout_height="wrap_content"
            android:hint="@string/BorrowBookYearFilterHint"
            android:layout_width="fill_parent">
        </EditText>

        <ProgressBar
            android:id="@+id/BorrowBookProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/BorrowBookListView"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent">
        </ListView>

    </LinearLayout>